--- a/grc339/digital-magazine-proposal/index.html
+++ b/grc339/digital-magazine-proposal/index.html
@@ -1,17 +1,15 @@
 <!doctype html>
+
 <html>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <title>GRC 339: Digital Magazine Proposal</title>
+    <title>Digital Magazine Proposal</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <meta http-equiv="refresh" content="0;url=https://mandy-ko.github.io/grc339/digital-magazine-proposal/">
 </head>
 
 <body>
-    <h1>Digital Magazine Proposal</h1>
+
 </body>
 
 </html>
