--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="images/willu.jpg">
         <p>Will you be my Valentine?</p>
         <button id="yes">Yes</button>
-        <button id="no">No</button>
+        <button id="no" onclick="random_image()">No</button>
     </div>
 </body>
 
