--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     <div>
         <img src="images/willu.jpg">
-        <p>Will you be my Valentine?</p>
-        <button id="yes">Yes</button>
-        <button id="no" onclick="random_image()">No</button>
+        <p id='poo'>Will you be my Valentine?</p>
+        <div class='a'><button id="yes">Yes</button>
+            <button id="no">No</button>
+        </div>
     </div>
 </body>
 
